--- a/unpackaged/main/default/layouts/Shipment-Shipment Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Shipment-Shipment Layout.layout-meta.xml
@@ -99,10 +99,6 @@
                 <behavior>Edit</behavior>
                 <field>ActualDeliveryDate</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Status</field>
-            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
@@ -184,17 +180,14 @@
     </quickActionList>
     <relatedLists>
         <fields>Name</fields>
-        <fields>Product2</fields>
         <fields>Quantity</fields>
-        <fields>SerialNumber__c</fields>
-        <fields>FulfillmentOrderLineItem</fields>
         <relatedList>ShipmentItems</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0Q000000QHmN</masterLabel>
+        <masterLabel>00h1X000003qBQk</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
