SOM Scope 1 - SOM to RC - Corrections following INT deploy - Jan30th

--- a/unpackaged/main/default/layouts/OrderSummary-Order Summary Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/OrderSummary-Order Summary Layout.layout-meta.xml
@@ -51,10 +51,6 @@
                 <field>passedFraudScreening__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>CaptureStatus__c</field>
-            </layoutItems>
-            <layoutItems>
                 <behavior>Edit</behavior>
                 <field>StoreOrigin__c</field>
             </layoutItems>
@@ -93,6 +89,10 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>latestExpectedDeliveryDate__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>cegidCustomerId__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
