Add profil and fields

--- a/unpackaged/main/default/layouts/OrderDeliveryMethod-Order Delivery Method Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/OrderDeliveryMethod-Order Delivery Method Layout.layout-meta.xml
@@ -38,6 +38,10 @@
                 <behavior>Required</behavior>
                 <field>Delivery_Type__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>wmsCode__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
