Different	Lightning page	Invoice_Record_Page Different	Lightning page	OMConsole_UtilityBar Different	Lightning page	Order_Summary_Record_Page Different	Custom object	OrderDeliveryMethod Different	Layout	OrderDeliveryMethod-Order Delivery Method Layout Different	Lightning page	ProductPage Different	Layout	Shipment-Shipment Layout Different	Flow	SOM_750_Fulfillment_Order_Cancelation New (included by problem analyzer)	Lightning web component	datatable

--- a/unpackaged/main/default/layouts/Shipment-Shipment Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Shipment-Shipment Layout.layout-meta.xml
@@ -181,13 +181,15 @@
     <relatedLists>
         <fields>Name</fields>
         <fields>Quantity</fields>
+        <fields>SerialNumber__c</fields>
+        <fields>Product2</fields>
         <relatedList>ShipmentItems</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1X000003qBQk</masterLabel>
+        <masterLabel>00h0D000000GsX5</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
