--- a/unpackaged/main/default/layouts/OrderSummary-Order Summary Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/OrderSummary-Order Summary Layout.layout-meta.xml
@@ -88,11 +88,23 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>LaunchRetryAllocation__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>latestExpectedDeliveryDate__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>cegidCustomerId__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>language__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>isOrderOnBehalf__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -178,6 +190,10 @@
                 <behavior>Readonly</behavior>
                 <field>TotalAmount</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>CaptureStatus__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -253,16 +269,6 @@
     <platformActionList>
         <actionListContext>Record</actionListContext>
         <platformActionListItems>
-            <actionName>OrderSummary.Retry_Capture</actionName>
-            <actionType>QuickAction</actionType>
-            <sortOrder>4</sortOrder>
-        </platformActionListItems>
-        <platformActionListItems>
-            <actionName>FeedItem.TextPost</actionName>
-            <actionType>QuickAction</actionType>
-            <sortOrder>5</sortOrder>
-        </platformActionListItems>
-        <platformActionListItems>
             <actionName>OrderSummary.Create_Refund</actionName>
             <actionType>QuickAction</actionType>
             <sortOrder>0</sortOrder>
@@ -281,6 +287,16 @@
             <actionName>OrderSummary.Cancel_Order</actionName>
             <actionType>QuickAction</actionType>
             <sortOrder>3</sortOrder>
+        </platformActionListItems>
+        <platformActionListItems>
+            <actionName>OrderSummary.Retry_Capture</actionName>
+            <actionType>QuickAction</actionType>
+            <sortOrder>4</sortOrder>
+        </platformActionListItems>
+        <platformActionListItems>
+            <actionName>FeedItem.TextPost</actionName>
+            <actionType>QuickAction</actionType>
+            <sortOrder>5</sortOrder>
         </platformActionListItems>
     </platformActionList>
     <quickActionList>
