--- a/unpackaged/main/default/layouts/FulfillmentOrder-Fulfillment Order Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/FulfillmentOrder-Fulfillment Order Layout.layout-meta.xml
@@ -44,6 +44,10 @@
                 <behavior>Edit</behavior>
                 <field>CurrencyIsoCode</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Capture_Status__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
