--- a/unpackaged/main/default/layouts/FulfillmentOrderLineItem-Fulfillment Order Product Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/FulfillmentOrderLineItem-Fulfillment Order Product Layout.layout-meta.xml
@@ -20,15 +20,11 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>IsReship</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>ReshipReason</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>Description</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>QuantityAvailableToShip__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -127,11 +123,6 @@
     </layoutSections>
     <platformActionList>
         <actionListContext>Record</actionListContext>
-        <platformActionListItems>
-            <actionName>Edit</actionName>
-            <actionType>StandardButton</actionType>
-            <sortOrder>0</sortOrder>
-        </platformActionListItems>
     </platformActionList>
     <relatedLists>
         <fields>Shipment</fields>
