--- a/unpackaged/main/default/layouts/Invoice-Invoice Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Invoice-Invoice Layout.layout-meta.xml
@@ -27,7 +27,7 @@
                 <field>BillToContactId</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>PDFGenerationStatus__c</field>
             </layoutItems>
             <layoutItems>
