--- a/unpackaged/main/default/layouts/OrderItemSummaryChange-Order Product Summary Change Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/OrderItemSummaryChange-Order Product Summary Change Layout.layout-meta.xml
@@ -22,6 +22,10 @@
                 <behavior>Edit</behavior>
                 <field>IsPreFulfillment</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>TestFreeText__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
