--- a/unpackaged/main/default/layouts/Shipment-Shipment Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Shipment-Shipment Layout.layout-meta.xml
@@ -146,11 +146,6 @@
     </layoutSections>
     <platformActionList>
         <actionListContext>Record</actionListContext>
-        <platformActionListItems>
-            <actionName>Edit</actionName>
-            <actionType>StandardButton</actionType>
-            <sortOrder>0</sortOrder>
-        </platformActionListItems>
     </platformActionList>
     <quickActionList>
         <quickActionListItems>
@@ -180,7 +175,10 @@
     </quickActionList>
     <relatedLists>
         <fields>Name</fields>
+        <fields>ExpectedDeliveryDate</fields>
         <fields>Quantity</fields>
+        <fields>TrackingNumber</fields>
+        <fields>TrackingUrl</fields>
         <relatedList>ShipmentItems</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
