--- a/unpackaged/main/default/layouts/PaymentAuthorization-Payment Authorization Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/PaymentAuthorization-Payment Authorization Layout.layout-meta.xml
@@ -193,6 +193,9 @@
         <layoutColumns />
         <style>CustomLinks</style>
     </layoutSections>
+    <platformActionList>
+        <actionListContext>Record</actionListContext>
+    </platformActionList>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
