--- a/unpackaged/main/default/layouts/CorrectiveInvoice__c-Corrective Invoice Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/CorrectiveInvoice__c-Corrective Invoice Layout.layout-meta.xml
@@ -21,7 +21,7 @@
                 <field>PreviousCorrectiveInvoice__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>PDFGenerationStatus__c</field>
             </layoutItems>
         </layoutColumns>
@@ -69,14 +69,14 @@
     <platformActionList>
         <actionListContext>Record</actionListContext>
         <platformActionListItems>
-            <actionName>DownloadCorrectiveInvoice</actionName>
-            <actionType>CustomButton</actionType>
-            <sortOrder>0</sortOrder>
-        </platformActionListItems>
-        <platformActionListItems>
             <actionName>NewTask</actionName>
             <actionType>QuickAction</actionType>
             <sortOrder>1</sortOrder>
+        </platformActionListItems>
+        <platformActionListItems>
+            <actionName>DownloadCorrectiveInvoice</actionName>
+            <actionType>CustomButton</actionType>
+            <sortOrder>0</sortOrder>
         </platformActionListItems>
         <platformActionListItems>
             <actionName>NewEvent</actionName>
