--- a/unpackaged/main/default/layouts/TransactionalEmail__c-Transactional Email Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/TransactionalEmail__c-Transactional Email Layout.layout-meta.xml
@@ -52,6 +52,10 @@
                 <behavior>Edit</behavior>
                 <field>CountrySite__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>test_ContactKey__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
