Commit of Salesforce metadata by Gearset

--- a/unpackaged/main/default/layouts/CorrectiveInvoice__c-Corrective Invoice Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/CorrectiveInvoice__c-Corrective Invoice Layout.layout-meta.xml
@@ -21,7 +21,7 @@
                 <field>PreviousCorrectiveInvoice__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>PDFGenerationStatus__c</field>
             </layoutItems>
         </layoutColumns>
@@ -61,9 +61,9 @@
         <detailHeading>false</detailHeading>
         <editHeading>true</editHeading>
         <label>Custom Links</label>
-        <layoutColumns/>
-        <layoutColumns/>
-        <layoutColumns/>
+        <layoutColumns />
+        <layoutColumns />
+        <layoutColumns />
         <style>CustomLinks</style>
     </layoutSections>
     <platformActionList>
