SOM-679 missing page layout

--- a/unpackaged/main/default/layouts/DigitalWallet-Digital Wallet Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/DigitalWallet-Digital Wallet Layout.layout-meta.xml
@@ -26,6 +26,10 @@
                 <behavior>Edit</behavior>
                 <field>RI_PaymentMethodId__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CardType__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
